--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
     "illuminate/events": "^11.11",
     "symfony/var-dumper": "^7.1",
     "twig/twig": "^3.10",
-    "workerman/validation": "^3.1"
+    "workerman/validation": "^3.1",
+    "vlucas/phpdotenv": "^5.5",
+    "ext-fileinfo": "*"
   },
   "suggest": {
     "ext-event": "For better performance. "
